--- a/netlify.toml
+++ b/netlify.toml
@@ -4,8 +4,8 @@
   for = "/*"
 
   [headers.values]
-    X-Content-Type-Options = nosniff
-    Referrer-Policy = no-referrer
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "no-referrer"
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
     Content-Security-Policy = "frame-ancestors https://www.facebook.com"
